@@ -54,7 +54,7 @@ ARISING OUT OF OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS
 SOFTWARE.
 
 ******************************************************************/
-/* $Id: pixman.h,v 1.23 2005-09-07 23:57:59 cworth Exp $ */
+/* $Id: pixman.h,v 1.24 2005-10-09 16:09:53 vektor Exp $ */
 
 /* libic.h */
 
@@ -348,9 +348,17 @@ int
 pixman_image_set_transform (pixman_image_t	*image,
 			    pixman_transform_t	*transform);
 
+/* Don't blame me, blame XRender */
+typedef enum {
+    PIXMAN_REPEAT_NONE,
+    PIXMAN_REPEAT_NORMAL,
+    PIXMAN_REPEAT_PAD,
+    PIXMAN_REPEAT_REFLECT
+} pixman_repeat_t;
+
 void
-pixman_image_set_repeat (pixman_image_t	*image,
-			 int		repeat);
+pixman_image_set_repeat (pixman_image_t		*image,
+			 pixman_repeat_t	repeat);
 
 void
 pixman_image_set_filter (pixman_image_t		*image,
